--- a/style.css
+++ b/style.css
@@ -1,174 +1,22 @@
-.judul{
-    width: 25%;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    font-family: "Times New Roman", Times, serif;
-    font-weight: bold;
-    font-size: 50px;
-    border-radius: 20px;
-    text-align: center;
+.image-hero {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+}
 
+.title {
+    font-family: 'Raleway', sans-serif;
 }
-.tag{
-    margin-top: 25px;
-    background-color: rgb(34, 235, 184);
-    width: 25%;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    font-family: "Times New Roman", Times, serif;
-    font-weight: bold;
-    font-size: 25px;
-    border-radius: 10px;
-    text-align: center;
 
+.subtitle {
+    letter-spacing: 10px;
+}
 
+#hero {
+    height: 95vh;
 }
-.form{
-    margin-bottom: 25px;
-    background-color: rgb(140, 223, 164);
-    width: 25%;
-    padding-bottom: 12px;
-    font-family: Arial, Helvetica, sans-serif;
-    border-radius: 10px;
-    padding-top: 12px;
 
-}
-.inputname{
-    border: 10px;
-    background-color: white;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 10px;
-    padding: 12px 20px;
-}
-.inputtentang{
-    border: 10px;
-    background-color: white;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 10px;
-    padding: 12px 20px;
-}
-.inputpendidikan{
-    border: 10px;
-    background-color: white;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 10px;
-    padding: 12px 20px;
-}
-.inputpengalaman{
-    border: 10px;
-    background-color: white;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 10px;
-    padding: 12px 20px;
-}
-.submit{
-  background-color: rgb(45, 57, 165);
-  color: white;
-  padding: 10px 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.submit:hover {
-    background-color: rgb(0, 0, 88);
-    color: white;
-  }
-.reset{
-  color: white;
-  padding: 10px 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  background-color: rgb(207, 90, 36) ;
-}
-.reset:hover {
-    background-color: rgb(228, 220, 105);
-    color: white;
-  }
-.inputfoto{
-    border: 10px;
-    background-color: white;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 10px;
-    padding: 12px 20px; 
-}
-.inputkeahlian{
-    border: 10px;
-    background-color: white;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 10px;
-    padding: 12px 20px; 
-}
-.table{
-    margin: auto;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 10px;
-}
-.judul{
-    background-color: rgb(34, 235, 184);
-    border-style: solid;
-    border-width: medium;
-}
-.isi{
-    background-color: antiquewhite;
-    border-style: solid;
-    border-width: medium;
-
-}
-.a{
-    border-bottom-style: solid;
-    border-width: medium;
-    border-right-style: solid;
-}
-.z{
-    border-bottom-style: solid;
-    border-width: medium;
-}
-.y{
-    border-width: medium;
-}
-.b{
-    border-width: medium;
-    border-right-style: solid;
-}
-.biodata{
-    border-radius: 10px;
-    width: 30%;
-}
-.biojudul{
-    background-color: rgb(248, 252, 175);
-    border-width: medium;
-    border: 5px;
-    border-style: solid;
-    border-color: rgb(255, 232, 205);
-    text-align: center;
-
-}
-.isibio{
-    background-color: rgb(248, 252, 175);
-    border-width: medium;
-    border: 5px;
-    border-style: solid;
-    border-color: rgb(255, 232, 205);
-}
-.kontakbio{
-    background-color: rgb(248, 252, 175);
-    border-width: medium;
-    border: 5px;
-    border-style: solid;
-    border-color: rgb(255, 232, 205);
-}
-.bioa{
-    background-color: rgb(248, 252, 175);
-    border-width: medium;
-    border: 5px;
-    border-style: solid;
-    border-color: rgb(255, 232, 205);
+.text-about {
+    text-indent: 50px;
+    text-align: justify;
 }
